hard-gists/a5f57e8c9d0aedee285fb6f43cb5900c/run.log
=== Docker Run Log for a5f57e8c9d0aedee285fb6f43cb5900c ===
Started at: Mi 29. Okt 18:58:14 CET 2025

[2025-10-29 18:58:14] START: Running container for a5f57e8c9d0aedee285fb6f43cb5900c
[2025-10-29 18:58:15] SUCCESS: Container 1a6901a054315f013d879d7d2129395576d0e8d757cb7ea4a3a60966b1f82135 started for a5f57e8c9d0aedee285fb6f43cb5900c
=== Container logs for a5f57e8c9d0aedee285fb6f43cb5900c ===
  File "/snippet.py", line 28
    print "%s/%s" % (frame_n, frame_count)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a5f57e8c9d0aedee285fb6f43cb5900c ===
[2025-10-29 18:58:17] INFO: Container 1a6901a054315f013d879d7d2129395576d0e8d757cb7ea4a3a60966b1f82135 has stopped
